--- a/docs/docs/concepts/how-it-works/spfx-project-upgrade.mdx
+++ b/docs/docs/concepts/how-it-works/spfx-project-upgrade.mdx
@@ -56,7 +56,7 @@ Across the different versions of SPFx, we've built rules that should cover for t
 
 ### Superseded rules
 
-A rule can supersede one or more other rules. You define superseded rules, by overriding the `supersedes` getter in the rule and return the array of rule IDs that the rule supersedes, eg.
+A rule can supersede one or more other rules. You define superseded rules, by overriding the `supersedes` getter in the rule and return the array of rule IDs that the rule supersedes, e.g.
 
 ```ts
 import { FileAddRemoveRule } from "./FileAddRemoveRule";
