--- a/docs/docs/v7-upgrade-guidance.mdx
+++ b/docs/docs/v7-upgrade-guidance.mdx
@@ -391,6 +391,14 @@ In the previous version of CLI for Microsoft 365, you could get deleted sites fr
 
 In your scripts, use the [spo tenant recyclebinitem list](./cmd/spo/tenant/tenant-recyclebinitem-list.mdx) command instead of `m365 spo site list --deleted`.
 
+## Removed `deleted` option from `aad group list` command
+
+In the previous version of CLI for Microsoft 365, you could get deleted groups in Azure AD using the command `aad group list` and providing an option `deleted`. In the latest release, we have removed that option from the command. Because only Microsoft 365 groups are stored in your tenant recycle bin, you should now use the command [aad m365group recyclebinitem list](./cmd/aad/m365group/m365group-recyclebinitem-list.mdx).
+
+### What action do I need to take?
+
+In your scripts, use the [aad m365group recyclebinitem list](./cmd/aad/m365group/m365group-recyclebinitem-list.mdx) command instead of `m365 aad group list --deleted`.
+
 ## Aligned options with naming convention
 
 In version 7 of the CLI for Microsoft 365, we have made updates to the options for certain commands, aligning with our naming convention. This includes renaming options to ensure consistency and improve the CLI experience. For example, the option `--environment` for the command `m365 pa app consent set` has been changed to `--environmentName`. These changes aim to make it easier for you to use the CLI.
