Renames options to plural form. Closes #4522

--- a/docs/docs/v7-upgrade-guidance.mdx
+++ b/docs/docs/v7-upgrade-guidance.mdx
@@ -425,9 +425,13 @@ We've updated the following commands and options:
 
 Command|Old option|New option
 --|--|--
+[aad app set](./cmd/aad/app/app-set.mdx)|`uri`|`uris`
+[aad approleassignment add](./cmd/aad/approleassignment/approleassignment-add.mdx)|`scope`|`scopes`
+[aad approleassignment remove](./cmd/aad/approleassignment/approleassignment-remove.mdx)|`scope`|`scopes`
 [aad group get](./cmd/aad/group/group-get.mdx)|`title`|`displayName`
 [aad user set](./cmd/aad/user/user-set.mdx)|`objectId`|`id`
 [aad user set](./cmd/aad/user/user-set.mdx)|`userPrincipalName`|`userName`
+[graph subscription add](./cmd/graph/subscription/subscription-add.mdx)|`changeType`|`changeTypes`
 [pa app consent set](./cmd/pa/app/app-consent-set.mdx)|`environment`|`environmentName`
 [pa app export](./cmd/pa/app/app-export.mdx)|`environment`|`environmentName`
 [pa app export](./cmd/pa/app/app-export.mdx)|`id`|`name`
@@ -457,8 +461,15 @@ Command|Old option|New option
 [pp solution publisher list](./cmd/pp/solution/solution-publisher-list.mdx)|`environment`|`environmentName`
 [pp solution publisher remove](./cmd/pp/solution/solution-publisher-remove.mdx)|`environment`|`environmentName`
 [spo file list](./cmd/spo/file/file-list.mdx)|`folder`|`folderUrl`
+[spo group member add](./cmd/spo/group/group-member-add.mdx)|`userName`|`userNames`
+[spo group member add](./cmd/spo/group/group-member-add.mdx)|`email`|`emails`
+[spo group member add](./cmd/spo/group/group-member-add.mdx)|`userId`|`userIds`
+[spo group member add](./cmd/spo/group/group-member-add.mdx)|`aadGroupId`|`aadGroupIds`
+[spo group member add](./cmd/spo/group/group-member-add.mdx)|`aadGroupName`|`aadGroupNames`
 [spo listitem attachment list](./cmd/spo/listitem/listitem-attachment-list.mdx)|`itemId`|`listItemId`
 [spo user get](./cmd/spo/user/user-get.mdx)|`loginName`|`userName`
+[teams channel member add](./cmd/teams/channel/channel-member-add.mdx)|`userId`|`userIds`
+[teams channel member add](./cmd/teams/channel/channel-member-add.mdx)|`userDisplayName`|`userDisplayNames`
 
 ### What action do I need to take?
 
