Fixes 'teams team clone' command. Closes #5451

--- a/docs/docs/cmd/teams/team/team-clone.mdx
+++ b/docs/docs/cmd/teams/team/team-clone.mdx
@@ -13,11 +13,11 @@ m365 teams team clone [options]
 ## Options
 
 ```md definition-list
-`-i, --id [id]`
+`-i, --id <id>`
 : The ID of the Microsoft Teams team to clone.
 
-`-n, --name [name]`
-: The display name for the new Microsoft Teams Team to clone.
+`-n, --name <name>`
+: The display name for the new Microsoft Teams team.
 
 `-p, --partsToClone <partsToClone>`
 : A comma-separated list of the parts to clone. Allowed values are `apps`, `channels`, `members`, `settings`, `tabs`.
