--- a/docs/docs/cmd/teams/user/user-app-remove.mdx
+++ b/docs/docs/cmd/teams/user/user-app-remove.mdx
@@ -16,8 +16,11 @@ m365 teams user app remove [options]
 `--id <id>`
 : The unique id of the app instance installed for the user.
 
-`--userId <userId>`
-: The ID of the user to uninstall the app for.
+`--userId [userId]`
+: The ID of the user to uninstall the app for. Specify `userId` or `userName` but not both.
+
+`--userName [userName]`
+: The UPN of the user to uninstall the app for. Specify `userId` or `userName` but not both.
 
 `-f, --force`
 : Confirm removal of app for user.
@@ -36,6 +39,12 @@ Uninstall an app for the specified user.
 
 ```sh
 m365 teams user app remove --id YzUyN2E0NzAtYTg4Mi00ODFjLTk4MWMtZWU2ZWZhYmE4NWM3IyM0ZDFlYTA0Ny1mMTk2LTQ1MGQtYjJlOS0wZDI4NTViYTA1YTY= --userId 2609af39-7775-4f94-a3dc-0dd67657e900
+```
+
+Uninstall an app for the specified user using its UPN.
+
+```sh
+m365 teams user app remove --id YzUyN2E0NzAtYTg4Mi00ODFjLTk4MWMtZWU2ZWZhYmE4NWM3IyM0ZDFlYTA0Ny1mMTk2LTQ1MGQtYjJlOS0wZDI4NTViYTA1YTY= --userName admin@contoso.com
 ```
 
 ## Response
