Removes ID from responses. Closes #5463

--- a/docs/docs/v7-upgrade-guidance.mdx
+++ b/docs/docs/v7-upgrade-guidance.mdx
@@ -399,6 +399,24 @@ In the previous version of CLI for Microsoft 365, you could get deleted groups i
 
 In your scripts, use the [aad m365group recyclebinitem list](./cmd/aad/m365group/m365group-recyclebinitem-list.mdx) command instead of `m365 aad group list --deleted`.
 
+## Removed `ID` property from response of certain commands
+
+When retrieving certain SharePoint objects, such as list items, the response would contained two ID properties: `ID` and `Id`. This is the way SharePoint returns the data. In version 7 of the CLI for Microsoft 365, we have removed the `ID` property from the response. This to make it easier to convert the JSON response to for example a PowerShell object. Because JSON parsing in PowerShell is not case sensitive, this would result in an error.
+
+We removed the `ID` property for the following commands:
+
+- [spo file get](./cmd/spo/file/file-get.mdx)
+- [spo listitem add](./cmd/spo/listitem/listitem-add.mdx)
+- [spo listitem set](./cmd/spo/listitem/listitem-set.mdx)
+- [spo page get](./cmd/spo/page/page-get.mdx)
+- [spo page list](./cmd/spo/page/page-list.mdx)
+- [spo tenant applicationcustomizer list](./cmd/spo/tenant/tenant-applicationcustomizer-list.mdx)
+- [spo tenant commandset list](./cmd/spo/tenant/tenant-commandset-list.mdx)
+
+### What action do I need to take?
+
+If you are using one of the affected commands listed above, make sure to update your scripts to use the `Id` property instead of `ID`.
+
 ## Aligned options with naming convention
 
 In version 7 of the CLI for Microsoft 365, we have made updates to the options for certain commands, aligning with our naming convention. This includes renaming options to ensure consistency and improve the CLI experience. For example, the option `--environment` for the command `m365 pa app consent set` has been changed to `--environmentName`. These changes aim to make it easier for you to use the CLI.
