Aligns options for command 'pa app export'. Closes #5368

--- a/docs/docs/v7-upgrade-guidance.mdx
+++ b/docs/docs/v7-upgrade-guidance.mdx
@@ -412,6 +412,8 @@ Command|Old option|New option
 [aad user set](./cmd/aad/user/user-set.mdx)|`userPrincipalName`|`userName`
 [pa app consent set](./cmd/pa/app/app-consent-set.mdx)|`environment`|`environmentName`
 [pa app export](./cmd/pa/app/app-export.mdx)|`environment`|`environmentName`
+[pa app export](./cmd/pa/app/app-export.mdx)|`id`|`name`
+[pa app export](./cmd/pa/app/app-export.mdx)|`n` (short)|`packageDisplayName`
 [pa app list](./cmd/pa/app/app-list.mdx)|`environment`|`environmentName`
 [pp aibuildermodel get](./cmd/pp/aibuildermodel/aibuildermodel-get.mdx)|`environment`|`environmentName`
 [pp aibuildermodel list](./cmd/pp/aibuildermodel/aibuildermodel-list.mdx)|`environment`|`environmentName`
