Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -16,8 +16,8 @@ sidebar_position: 4
 - removed 'deleted' option from 'aad user list' command [#4516](https://github.com/pnp/cli-microsoft365/issues/4516)
 - extended 'spo tenant commandset set' with get options 'id', 'title' or 'clientSideComponentId' [#4961](https://github.com/pnp/cli-microsoft365/issues/4961)
 - updated command output of few 'flow' commands [#4444](https://github.com/pnp/cli-microsoft365/issues/4444)
-- migrated CLI to esm [#4306](https://github.com/pnp/cli-microsoft365/issues/4306)
-- migrated scripts to esm
+- migrated CLI to ESM [#4306](https://github.com/pnp/cli-microsoft365/issues/4306)
+- migrated scripts to ESM
 - updated 'spo tenant applicationcustomizer get' command [#4872](https://github.com/pnp/cli-microsoft365/issues/4872)
 - updated default help mode to 'options' [#5182](https://github.com/pnp/cli-microsoft365/issues/5182)
 - removed deprecated options from 'spo retentionlabel ensure' [#4207](https://github.com/pnp/cli-microsoft365/issues/4207)
@@ -32,6 +32,12 @@ sidebar_position: 4
 - fixed spinner when logging verbose messages [#5378](https://github.com/pnp/cli-microsoft365/issues/5378)
 - removed pa pcf commands [#5391](https://github.com/pnp/cli-microsoft365/issues/5391)
 - removed `--deleted` option from `spo site list` [#5392](https://github.com/pnp/cli-microsoft365/issues/5392)
+- removed `--deleted` option from `aad group list` [#5429](https://github.com/pnp/cli-microsoft365/issues/5429)
+- aligned option name for `aad group get` [#5425](https://github.com/pnp/cli-microsoft365/issues/5425)
+- updated documentation to use ESM [#5416](https://github.com/pnp/cli-microsoft365/issues/5416)
+- fixed response of command `spo site list` [#5461](https://github.com/pnp/cli-microsoft365/issues/5461)
+- aligned option names for command `pa app export` [#5368](https://github.com/pnp/cli-microsoft365/issues/5368)
+- removed duplicate ID property from SharePoint list item responses [#5463](https://github.com/pnp/cli-microsoft365/issues/5463)
 
 ## [v6.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
