Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -38,6 +38,12 @@ sidebar_position: 4
 - fixed response of command `spo site list` [#5461](https://github.com/pnp/cli-microsoft365/issues/5461)
 - aligned option names for command `pa app export` [#5368](https://github.com/pnp/cli-microsoft365/issues/5368)
 - removed duplicate ID property from SharePoint list item responses [#5463](https://github.com/pnp/cli-microsoft365/issues/5463)
+- refactored to async/await - util constants [#5144](https://github.com/pnp/cli-microsoft365/issues/5144)
+- updated 'teams team list' command [#5377](https://github.com/pnp/cli-microsoft365/issues/5377)
+- renamed Twitter to X [#5415](https://github.com/pnp/cli-microsoft365/pull/5415)
+- fixed 'aad m365group add' resourceBehaviorOptions [#5408](https://github.com/pnp/cli-microsoft365/issues/5408)
+- added support for upgrading SPFx projects to v1.18.0-rc.1. [#5453](https://github.com/pnp/cli-microsoft365/issues/5453)
+- fixed dark theme syntax highlighting [#5468](https://github.com/pnp/cli-microsoft365/issues/5468)
 
 ## [v6.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
