Fixes docs build

--- a/docs/docs/cmd/pp/solution/solution-publisher-get.mdx
+++ b/docs/docs/cmd/pp/solution/solution-publisher-get.mdx
@@ -19,10 +19,10 @@ m365 pp solution publisher get [options]
 : The name of the environment.
 
 `-i --id [id]`
-: The ID of the solution. Specify either `id` or `name` but not both.
+: The ID of the publisher. Specify either `id` or `name` but not both.
 
 `-n, --name [name]`
-: The unique name (not the display name) of the solution. Specify either `id` or `name` but not both.
+: The unique name of the publisher. Specify either `id` or `name` but not both.
 
 `--asAdmin`
 : Run the command as admin for environments you do not have explicitly assigned permissions to.
