--- a/docs/docs/cmd/pp/solution/solution-publisher-remove.mdx
+++ b/docs/docs/cmd/pp/solution/solution-publisher-remove.mdx
@@ -17,10 +17,10 @@ m365 pp solution publisher remove [options]
 : The name of the environment.
 
 `-i, --id [id]`
-: The id of the solution. Specify either `id` or `name` but not both.
+: The id of the publisher. Specify either `id` or `name` but not both.
 
 `-n, --name [name]`
-: The name of the solution. Specify either `id` or `name` but not both.
+: The unique name of the publisher. Specify either `id` or `name` but not both.
 
 `--asAdmin`
 : Run the command as admin for environments you do not have explicitly assigned permissions to.
