--- a/docs/docs/cmd/spfx/spfx-doctor.mdx
+++ b/docs/docs/cmd/spfx/spfx-doctor.mdx
@@ -5,6 +5,10 @@ import TabItem from '@theme/TabItem';
 
 Verifies environment configuration for using the specific version of the SharePoint Framework
 
+## npm install command
+
+npm i -g @pnp/cli-microsoft365
+
 ## Usage
 
 ```sh
