Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -44,6 +44,11 @@ sidebar_position: 4
 - fixed 'aad m365group add' resourceBehaviorOptions [#5408](https://github.com/pnp/cli-microsoft365/issues/5408)
 - added support for upgrading SPFx projects to v1.18.0-rc.1. [#5453](https://github.com/pnp/cli-microsoft365/issues/5453)
 - fixed dark theme syntax highlighting [#5468](https://github.com/pnp/cli-microsoft365/issues/5468)
+- enhances 'spo page section add' with vertical section templates and zoneEmphasis. [#1759](https://github.com/pnp/cli-microsoft365/issues/1759)
+- fixes redundant white spaces in docs. [#5418](https://github.com/pnp/cli-microsoft365/issues/5418) 
+- fixes 'teams team clone' command. [#5451](https://github.com/pnp/cli-microsoft365/issues/5451)
+- adds support for interactive mode for disambiguation prompts. [#5053](https://github.com/pnp/cli-microsoft365/issues/5053)
+- adds new command 'tenant info get'. [#5389](https://github.com/pnp/cli-microsoft365/issues/5389)
 
 ## [v6.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
