Adds new contributor Michał Kornet

--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -450,6 +450,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'michael_maillot'
   },
   {
+    name: 'Michał Kornet',
+    company: 'mknet',
+    github: 'mkm17',
+    x: 'kornetmichal'
+  },
+  {
     name: 'Mikael Svenson',
     company: 'Microsoft',
     github: 'wobba',
