--- a/docs/docs/cmd/teams/app/app-remove.mdx
+++ b/docs/docs/cmd/teams/app/app-remove.mdx
@@ -16,11 +16,11 @@ m365 teams app remove [options]
 `-i, --id [id]`
 : ID of the Teams app to remove. Needs to be available in your organization\'s app catalog. Specify either `id` or `name`.
 
-`--name [name]`
+`-n, --name [name]`
 : Name of the Teams app to remove. Needs to be available in your organization\'s app catalog. Specify either `id` or `name`.
 
 `-f, --force`
-: Don't prompt for confirming removing the app
+: Don't prompt for confirming removing the app.
 ```
 
 <Global />
