Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -6,6 +6,16 @@ sidebar_position: 4
 
 ## [v7.0.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v7.0.0)
 
+### New commands
+
+**Azure Active Directory:**
+
+- [aad group remove](../cmd/aad/group/group-remove.mdx) - removes an Azure AD group [#5426](https://github.com/pnp/cli-microsoft365/issues/5426)
+
+**Tenant:**
+
+- [tenant info get](../cmd/tenant/info/info-get.mdx) - gets information about any tenant [#5389](https://github.com/pnp/cli-microsoft365/issues/5389)
+
 ### Changes
 
 - renamed `confirm` option to `force` [#4551](https://github.com/pnp/cli-microsoft365/issues/4551)
@@ -44,11 +54,17 @@ sidebar_position: 4
 - fixed 'aad m365group add' resourceBehaviorOptions [#5408](https://github.com/pnp/cli-microsoft365/issues/5408)
 - added support for upgrading SPFx projects to v1.18.0-rc.1. [#5453](https://github.com/pnp/cli-microsoft365/issues/5453)
 - fixed dark theme syntax highlighting [#5468](https://github.com/pnp/cli-microsoft365/issues/5468)
-- enhances 'spo page section add' with vertical section templates and zoneEmphasis. [#1759](https://github.com/pnp/cli-microsoft365/issues/1759)
-- fixes redundant white spaces in docs. [#5418](https://github.com/pnp/cli-microsoft365/issues/5418) 
-- fixes 'teams team clone' command. [#5451](https://github.com/pnp/cli-microsoft365/issues/5451)
-- adds support for interactive mode for disambiguation prompts. [#5053](https://github.com/pnp/cli-microsoft365/issues/5053)
-- adds new command 'tenant info get'. [#5389](https://github.com/pnp/cli-microsoft365/issues/5389)
+- enhanced 'spo page section add' with vertical section templates and zoneEmphasis [#1759](https://github.com/pnp/cli-microsoft365/issues/1759)
+- fixed redundant white spaces in docs [#5418](https://github.com/pnp/cli-microsoft365/issues/5418) 
+- fixed 'teams team clone' command [#5451](https://github.com/pnp/cli-microsoft365/issues/5451)
+- added support for interactive mode for disambiguation prompts [#5053](https://github.com/pnp/cli-microsoft365/issues/5053)
+- fixed planner options to be parsed as string [#5177](https://github.com/pnp/cli-microsoft365/issues/5177)
+- renamed few options to plural that accept more than 1 value [#4522](https://github.com/pnp/cli-microsoft365/issues/4522)
+- updated version metadata of sample scripts [#5440](https://github.com/pnp/cli-microsoft365/issues/5440)
+- extended 'spfx project upgrade' with support for 1.18.0 [#5493](https://github.com/pnp/cli-microsoft365/issues/5493)
+- extended 'spfx doctor' with support for 1.18.0 [#5493](https://github.com/pnp/cli-microsoft365/issues/5493)
+- extended 'spfx project doctor' with support for 1.18.0 [#5493](https://github.com/pnp/cli-microsoft365/issues/5493)
+
 
 ## [v6.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
