Change short option

--- a/docs/docs/cmd/spo/file/file-get.mdx
+++ b/docs/docs/cmd/spo/file/file-get.mdx
@@ -15,10 +15,10 @@ m365 spo file get [options]
 ## Options
 
 ```md definition-list
-`-w, --webUrl <webUrl>`
+`-u, --webUrl <webUrl>`
 : The URL of the site where the file is located
 
-`-u, --url [url]`
+`--url [url]`
 : The server- or site-relative decoded URL of the file to retrieve. Specify either `url` or `id` but not both
 
 `-i, --id [id]`
