--- a/docs/docs/cmd/spo/file/file-remove.mdx
+++ b/docs/docs/cmd/spo/file/file-remove.mdx
@@ -19,13 +19,13 @@ m365 spo page template remove
 ## Options
 
 ```md definition-list
-`-w, --webUrl <webUrl>`
+`-u, --webUrl <webUrl>`
 : URL of the site where the file to remove is located
 
 `-i, --id [id]`
 : The ID of the file to remove. Specify either `id` or `url` but not both
 
-`-u, --url [url]`
+`--url [url]`
 : The server- or site-relative decoded URL of the file to remove. Specify either `id` or `url` but not both
 
 `--recycle`
