--- a/docs/docs/cmd/spo/file/file-version-restore.mdx
+++ b/docs/docs/cmd/spo/file/file-version-restore.mdx
@@ -13,13 +13,13 @@ m365 spo file version restore [options]
 ## Options
 
 ```md definition-list
-`-w, --webUrl <webUrl>`
+`-u, --webUrl <webUrl>`
 : The URL of the site where the file is located
 
 `--label <label>`
 : Label of version which will be restored
 
-`-u, --fileUrl [fileUrl]`
+`--fileUrl [fileUrl]`
 : The server- or site-relative decoded URL of the file whose version will be restored. Specify either `fileUrl` or `fileId` but not both
 
 `-i, --fileId [fileId]`
