--- a/docs/docs/cmd/spo/file/file-version-clear.mdx
+++ b/docs/docs/cmd/spo/file/file-version-clear.mdx
@@ -13,10 +13,10 @@ m365 spo file version clear [options]
 ## Options
 
 ```md definition-list
-`-w, --webUrl <webUrl>`
+`-u, --webUrl <webUrl>`
 : The URL of the site where the file is located
 
-`-u, --fileUrl [fileUrl]`
+`--fileUrl [fileUrl]`
 : The server- or site-relative decoded URL of the file. Specify either `fileUrl` or `fileId` but not both
 
 `-i, --fileId [fileId]`
