--- a/docs/docs/cmd/spo/file/file-version-get.mdx
+++ b/docs/docs/cmd/spo/file/file-version-get.mdx
@@ -15,13 +15,13 @@ m365 spo file version get [options]
 ## Options
 
 ```md definition-list
-`-w, --webUrl <webUrl>`
+`-u, --webUrl <webUrl>`
 : The URL of the site where the file is located
 
 `--label <label>`
 : Label of version which will be retrieved
 
-`-u, --fileUrl [fileUrl]`
+`--fileUrl [fileUrl]`
 : The server- or site-relative decoded URL of the file to retrieve. Specify either `fileUrl` or `fileId` but not both
 
 `-i, --fileId [fileId]`
