Changed short option for multiple commands. Closes #5478

--- a/docs/docs/v7-upgrade-guidance.mdx
+++ b/docs/docs/v7-upgrade-guidance.mdx
@@ -460,7 +460,21 @@ Command|Old option|New option
 [pp solution publisher add](./cmd/pp/solution/solution-publisher-add.mdx)|`environment`|`environmentName`
 [pp solution publisher list](./cmd/pp/solution/solution-publisher-list.mdx)|`environment`|`environmentName`
 [pp solution publisher remove](./cmd/pp/solution/solution-publisher-remove.mdx)|`environment`|`environmentName`
+[spo file get](./cmd/spo/file/file-get.mdx)|`w / webUrl` (short)|`u / webUrl`
+[spo file get](./cmd/spo/file/file-get.mdx)|`u / url` (short)|`url`
 [spo file list](./cmd/spo/file/file-list.mdx)|`folder`|`folderUrl`
+[spo file remove](./cmd/spo/file/file-remove.mdx)|`w / webUrl` (short)|`u / webUrl`
+[spo file remove](./cmd/spo/file/file-remove.mdx)|`u / url` (short)|`url`
+[spo file version clear](./cmd/spo/file/file-version-clear.mdx)|`w / webUrl` (short)|`u / webUrl`
+[spo file version clear](./cmd/spo/file/file-version-clear.mdx)|`u / fileUrl` (short)|`fileUrl`
+[spo file version get](./cmd/spo/file/file-version-get.mdx)|`w / webUrl` (short)|`u / webUrl`
+[spo file version get](./cmd/spo/file/file-version-get.mdx)|`u / fileUrl` (short)|`fileUrl`
+[spo file version list](./cmd/spo/file/file-version-list.mdx)|`w / webUrl` (short)|`u / webUrl`
+[spo file version list](./cmd/spo/file/file-version-list.mdx)|`u / fileUrl` (short)|`fileUrl`
+[spo file version remove](./cmd/spo/file/file-version-remove.mdx)|`w / webUrl` (short)|`u / webUrl`
+[spo file version remove](./cmd/spo/file/file-version-remove.mdx)|`u / fileUrl` (short)|`fileUrl`
+[spo file version restore](./cmd/spo/file/file-version-restore.mdx)|`w / webUrl` (short)|`u / webUrl`
+[spo file version restore](./cmd/spo/file/file-version-restore.mdx)|`u / fileUrl` (short)|`fileUrl`
 [spo group member add](./cmd/spo/group/group-member-add.mdx)|`userName`|`userNames`
 [spo group member add](./cmd/spo/group/group-member-add.mdx)|`email`|`emails`
 [spo group member add](./cmd/spo/group/group-member-add.mdx)|`userId`|`userIds`
